fix: Fixing category UnitTest